@@ -5,6 +5,9 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
+- Task listing PDF: use containing_dossier.
+  [jone]
+
 - Task listing PDF: updated layout and columns.
   Issue #1331 Anpassung am PDF-Aufgabenverzeichnis
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1331/
